modified files and added another logo option

--- a/views/_layout.hbs
+++ b/views/_layout.hbs
@@ -11,10 +11,10 @@
     <div>
         <aside>
             <div class="center">
-                <img class="logo" src="/static/img/logo.png" alt="logo">
+                <img class="logo" src="/static/img/wiki_logo.jpg" alt="logo">
             </div>
 
-            {{navigation}}
+            {{>navigation}}
 
         </aside>
         <div id="container">
