added the original code stashed in a folder

--- a/views/providedCode/all-articles.html
+++ b/views/providedCode/all-articles.html
@@ -56,9 +56,7 @@
                     </div>
                 </section>
             </main>
-            <footer>
-                KingUni Wiki &copy; 2020
-            </footer>
+            {{> footer}}
         </div>
     </div>
 </body>
