--- a/views/providedCode/index.html
+++ b/views/providedCode/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Wiki</title>
-    <link rel="stylesheet" href="/public/css/site.css">
+    <link rel="stylesheet" href="/static/css/site.css">
 </head>
 
 <body>
     <div>
         <aside>
             <div class="center">
-                <img class="logo" src="/public/img/logo.png" alt="logo">
+                <img class="logo" src="/static/img/wiki_logo.jpg" alt="logo">
             </div>
 
             <nav>
