--- a/views/_layout.hbs
+++ b/views/_layout.hbs
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/site.css"
     <title>Wiki</title>
+    <link rel="stylesheet" href="/css/site.css">
 </head>
+
 <body>
     <div>
         <aside>
             <div class="center">
-                <img class="logo" src="/static/img/wiki_logo.jpg" alt="logo">
+                <img class="logo" src="/img/logo.png" alt="logo">
             </div>
 
-            {{>navigation}}
-
+            {{> navigation}}
         </aside>
         <div id="container">
-
-            {{>header}}
-
+            {{> header}}
+            
             <main>
-                
-                <h1>Welcome to KingUni Wiki</h1>
-
-                {{{body}}}
-
+                <h1>Welcome to KingUni Wiki!</h1>
+                {{{ body }}}
             </main>
 
-            {{>footer}}
-            
+            {{> footer}}
         </div>
     </div>
-    
 </body>
+
 </html>
