folder name change

--- a/views/_layout.hbs
+++ b/views/_layout.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki</title>
+    <title>KingUni_Wiki</title>
     <link rel="stylesheet" href="/css/site.css">
 </head>
 
@@ -23,7 +23,7 @@
             
             <main>
                 <h1>Welcome to KingUni Wiki!</h1>
-                {{{ body }}}
+                {{{body}}}
             </main>
 
             {{> footer}}
