--- a/views/search-results.hbs
+++ b/views/search-results.hbs
@@ -4,7 +4,7 @@
         <ul>
             {{#each articles}}
                 <li>
-                    <a href="/article/details/{{this._id}}">{{this.title}}</a>
+                    <a href="/article/details/{{article._id}}">{{article.title}}</a>
                 </li>
             {{/each}}
         </ul>
