added a model and also modified other folders/files

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,8 @@
         <article>
             <h3>{{article.title}}</h3>
             <p>
-                {{article.description}}&hellip;
+                {{article.description}}&hellip;  
+                {{!-- &hellip; is simply 3 dots --}}
             </p>
             <div class="controls">
                 <a href="/article/details/{{article._id}}">Read more</a>
@@ -13,4 +14,4 @@
     {{/each}}
 </section>
 
-{{!-- 8/28 --}}
+{{!-- 8/30 added article in place of this within the hbs --}}
